Fix z-index issue

--- a/assets/stylesheets/wizard/custom/validators.scss
+++ b/assets/stylesheets/wizard/custom/validators.scss
@@ -17,6 +17,7 @@
   box-shadow: shadow("dropdown");
   width: 100%;
   box-sizing: border-box;
+  z-index: 100;
   
   .title {
     color: var(--primary);
